lab-05/manifests/java/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-service
  namespace: dev
  labels:
    app.kubernetes.io/name: java-app
spec:
  type: ClusterIP
  selector:
    app: java-app
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  sessionAffinity: None
